--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "elm-tooling": "^1.3.0"
   },
   "scripts": {
-    "start": "elm-live src/Scene.elm",
+    "start": "elm-live tests/Viewer.elm",
     "test": "elm-test-rs",
     "postinstall": "elm-tooling install"
   }
