--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "author": "Tomas Latal <latal.tomas@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "elm-live": "^4.0.2",
     "elm-tooling": "^1.3.0"
   },
   "scripts": {
-    "start": "elm-live src/Scene.elm",
+    "start": "vite",
     "build": "elm make tests/Viewer.elm --output docs/index.html",
     "test": "elm-test-rs",
     "postinstall": "elm-tooling install"
+  },
+  "dependencies": {
+    "vite": "^2.9.14",
+    "vite-plugin-elm": "^2.7.0-beta.3"
   }
 }
