--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vite": "^2.9.14",
-    "vite-plugin-elm": "^2.7.0-beta.3"
+    "vite-plugin-elm": "^2.7.0-beta.3",
+    "vite-plugin-string-replace": "^1.0.2"
   }
 }
