--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "devDependencies": {
     "elm-tooling": "^1.3.0",
     "elm-watch": "^1.1.2",
-    "run-pty": "^4.0.3"
+    "run-pty": "^4.0.3",
+    "serve": "^14.2.0"
   },
   "scripts": {
-    "start": "run-pty %% elm-watch hot %% http-server ./build",
+    "start": "run-pty %% elm-watch hot %% serve",
     "build": "elm-watch make tests/Viewer.elm --output docs/index.html",
     "test": "elm-test-rs",
     "postinstall": "elm-tooling install"
